--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "No Indian bot for Twitter",
-  "description": "No Indian bot for Twitter",
+  "name": "Whosbot - Replies bot blocker for Twitter",
+  "description": "Replies bot blocker for Twitter",
   "version": "1.0.0",
   "icons": {
     "128": "icon.png"
